# bl-rs

./: Cargo.toml  README.md
demo/: Cargo.toml  README.md  memory.x  run.sh
demo/.cargo/: config.toml
demo/src/: main.rs
src/: commands.rs  error.rs  fw_header.rs  lib.rs  main.rs  transport.rs
src/commands/: efuse.rs
src/fw_header/: bl616.rs
