[package]
name = "bl"
version = "0.0.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/bl-rs"
documentation = "https://docs.rs/bl"
homepage = "https://github.com/andelf/bl-rs"
categories = []
description = "bl command line for Bouffalo Lab's MCUs"
keywords = []
readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
crc = "3.0.1"
serialport = "4.2.0"
thiserror = "1.0.38"
