[package]
name = "bl616"
version = "0.1.0"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/bl616"
documentation = "https://docs.rs/bl616"
homepage = "https://github.com/andelf/bl616"
categories = []
description = ""
keywords = []
readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# panic-halt = "0.2.0"
r0 = "1.0.0"
riscv = "0.10.1"
riscv-rt = "0.11.0"

bl616-pac = "0.0.0"
